test/spec_vectors/block/fail/module_32.wat
(module (func $type-value-void-vs-f32 (result f32) (block (result f32) (nop))))